--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/reset/reset.css" />
     <link rel="stylesheet" href="./styles/main/style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.1/dist/leaflet.css"
+    integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+    crossorigin=""/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
+    integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
+    crossorigin=""></script>
     <script
       src="https://kit.fontawesome.com/5f4340e36e.js"
       crossorigin="anonymous"
@@ -18,6 +26,7 @@
         <a
           class="contact-bar__icons__link"
           href="https://github.com/Floriansaliba"
+          target="_blank"
         >
           <svg
             class="svg"
@@ -53,11 +62,11 @@
         <a
           class="contact-bar__icons__link"
           href="https://www.linkedin.com/in/florian-saliba/"
+          target="_blank"
         >
           <svg
             class="svg"
             version="1.1"
-            id="Calque_1"
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px"
@@ -81,7 +90,7 @@
           class="contact-bar__email__link"
           ><svg class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path class="svg__path" d="M464 64C490.5 64 512 85.49 512 112C512 127.1 504.9 141.3 492.8 150.4L275.2 313.6C263.8 322.1 248.2 322.1 236.8 313.6L19.2 150.4C7.113 141.3 0 127.1 0 112C0 85.49 21.49 64 48 64H464zM217.6 339.2C240.4 356.3 271.6 356.3 294.4 339.2L512 176V384C512 419.3 483.3 448 448 448H64C28.65 448 0 419.3 0 384V176L217.6 339.2z"/></svg>florian.saliba@gmail.com</a
         >
-      </div>
+
     </aside>
     <header class="header">
         <nav class="nav-bar">
@@ -91,10 +100,10 @@
                         <svg class="svg__nav" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="svg__nav__path" d="M511.8 287.6L512.5 447.7C512.5 450.5 512.3 453.1 512 455.8V472C512 494.1 494.1 512 472 512H456C454.9 512 453.8 511.1 452.7 511.9C451.3 511.1 449.9 512 448.5 512H392C369.9 512 352 494.1 352 472V384C352 366.3 337.7 352 320 352H256C238.3 352 224 366.3 224 384V472C224 494.1 206.1 512 184 512H128.1C126.6 512 125.1 511.9 123.6 511.8C122.4 511.9 121.2 512 120 512H104C81.91 512 64 494.1 64 472V360C64 359.1 64.03 358.1 64.09 357.2V287.6H32.05C14.02 287.6 0 273.5 0 255.5C0 246.5 3.004 238.5 10.01 231.5L266.4 8.016C273.4 1.002 281.4 0 288.4 0C295.4 0 303.4 2.004 309.5 7.014L416 100.7V64C416 46.33 430.3 32 448 32H480C497.7 32 512 46.33 512 64V185L564.8 231.5C572.8 238.5 576.9 246.5 575.8 255.5C575.8 273.5 560.8 287.6 543.8 287.6L511.8 287.6z"/></svg>
                     </a>
                 </li>
-                <li class="nav-bar__list__li"><a href="">Compétences</a></li>
-                <li class="nav-bar__list__li"><a href="">Mes projets</a></li>
-                <li class="nav-bar__list__li"><a href="">à propos</a></li>
-                <li class="nav-bar__list__li"><a href="">contact</a></li>
+                <li class="nav-bar__list__li"><a href="#skills-section">Compétences</a></li>
+                <li class="nav-bar__list__li"><a href="#projects-section">Mes projets</a></li>
+                <li class="nav-bar__list__li"><a href="#about-section">à propos</a></li>
+                <li class="nav-bar__list__li"><a href="#contact-section">contact</a></li>
             </ul>
         </nav>
     </header>
@@ -109,7 +118,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"/></svg>
         </div>
     </div>
-    <section class="skills-section">
+    <section class="skills-section" id="skills-section" data-aos="zoom-in-up" data-aos-duration="500">
       <div class="heading">
         <h2 class="section-title">Mes Compétences</h2>
         <h3 class="section-subtitle">Des compétences à votre service</h3>
@@ -213,26 +222,114 @@
         </div>
       </div>
     </section>
-    <section class="projects-section">
+    <section class="projects-section" id="projects-section" data-aos="zoom-in-up" data-aos-duration="500">
       <div class="heading">
         <h2 class="section-title">Mes Projets</h2>
         <h3 class="section-subtitle">Parcourez mes projets Front-End</h3>
       </div>
-      <div class="projects">
-        <div class="project">
-          <div class="project__image-box">
-            <img class="project__image-box__image" src="./assests/pictures/les_petits_plats.PNG" alt="Les petits plats">
+      <div class="projects" id="projects">
+      </div>
+    </section>
+    <section class="about-section" id="about-section" data-aos="zoom-in-up" data-aos-duration="500">
+      <div class="heading">
+        <h2 class="section-title">à Propos</h2>
+        <h3 class="section-subtitle">Apprenez-en plus sur mon parcours</h3>
+      </div>
+        <p class="about_intro">« Après 10 ans d'expériences professionnelles en tant qu'Acheteur Industriel, je décide en 2021 de changer de voie afin de me consacrer à un métier privilégiant d'avantage la valeur plaisir. » </p>
+        <div class="dropdown">
+          <div class="dropdown__head">
+            <p class="dropdown__head__title">Pourquoi avoir choisi le développement, et plus particulièrement le développement front end ?</p>
+            <div class="dropdown__head__arrow">
+              <svg class="down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+              <svg class="up" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"/></svg>
+            </div>
           </div>
-          <div class="project__image-box__hover-frame">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M279.6 160.4C282.4 160.1 285.2 160 288 160C341 160 384 202.1 384 256C384 309 341 352 288 352C234.1 352 192 309 192 256C192 253.2 192.1 250.4 192.4 247.6C201.7 252.1 212.5 256 224 256C259.3 256 288 227.3 288 192C288 180.5 284.1 169.7 279.6 160.4zM480.6 112.6C527.4 156 558.7 207.1 573.5 243.7C576.8 251.6 576.8 260.4 573.5 268.3C558.7 304 527.4 355.1 480.6 399.4C433.5 443.2 368.8 480 288 480C207.2 480 142.5 443.2 95.42 399.4C48.62 355.1 17.34 304 2.461 268.3C-.8205 260.4-.8205 251.6 2.461 243.7C17.34 207.1 48.62 156 95.42 112.6C142.5 68.84 207.2 32 288 32C368.8 32 433.5 68.84 480.6 112.6V112.6zM288 112C208.5 112 144 176.5 144 256C144 335.5 208.5 400 288 400C367.5 400 432 335.5 432 256C432 176.5 367.5 112 288 112z"/></svg>
+          <div class="dropdown__content">
+            <p class="dropdown__content__p">Ma motivation est basée sur la recherche de challenges, la création, l'innovation et l'apprentissage permanant. Autant de qualités que se doit d'avoir un développeur Front-End. 
+              Je me suis par ailleurs testé au développement via le site OpenClassrooms avant de me lancer dans un parcours diplômant. J'ai pris du plaisir à apprendre par la pratique et le fait de voir instantanément le fruit de mon travail à l’écran me procurait une grande satisfaction. Absorbé par les vidéos de développeurs transmettant avec passion leurs savoirs autour de CSS, HTML ou Javascript, je décide de me lancer pour un an dans le parcours de développeur d’applications front-end proposé par OpenClassroom. 
+              </p>
           </div>
-          <div class="project__text-box">
-            <h3 class="project__text-box__title">Les petits plats</h3>
-            <p class="project__text-box__description">Recherche de plats par ingrédients</p>
+        </div>
+        <div class="dropdown">
+          <div class="dropdown__head">
+            <p class="dropdown__head__title">Pourquoi OpenClassrooms ?</p>
+            <div class="dropdown__head__arrow">
+              <svg class="down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+              <svg class="up" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"/></svg>
+            </div>
+          </div>
+          <div class="dropdown__content">
+            <p class="dropdown__content__p">Plutôt que de revenir sur les bancs de l’école, j’ai privilégié un apprentissage 100% en ligne, me permettant de suivre mes cours de manière autonome. OpenClassrooms proposait une offre permettant l’apprentissage par la pratique. J’ai pu réaliser 14 projets en 1 an, le but étant de faire valider chaque compétence acquises par des professionnels du développement Front, et profiter de leur retour d’expérience, afin d’intégrer le marché de l’emploi en toute confiance. </p>
+          </div>
+        </div>
+        <div class="dropdown">
+          <div class="dropdown__head">
+            <p class="dropdown__head__title">Quelles orientations pour la suite ? </p>
+            <div class="dropdown__head__arrow">
+              <svg class="down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+              <svg class="up" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"/></svg>
+            </div>
+          </div>
+          <div class="dropdown__content">
+            <p class="dropdown__content__p">Je recherche actuellement une ESN , agence de communication, ou start-up, privilégiant un fonctionnement Agile, et me permettant de monter en compétences parmi des développeurs plus expérimentés. L’apprentissage du développement back-end ou de l’UX/UI Design restent des options envisageables à plus long terme. </p>
           </div>
         </div>
       </div>
     </section>
-    <script src="index.js"></script>
+    <section class="contact-section" id="contact-section" data-aos="zoom-in-up" data-aos-duration="500">
+      <div class="heading">
+        <h2 class="section-title">Contact</h2>
+        <h3 class="section-subtitle">Un besoin ? Contactez-moi</h3>
+      </div>
+      <div class="layout">
+      <div class="form-container">
+        <form class="contact-form" action="https://formsubmit.co/florian.saliba@gmail.com" method="POST">
+          <input type="hidden" name="_next" value="http://127.0.0.1:5500/">
+          <input type="hidden" name="_captcha" value="false">
+          <input type="text" class="input" id="first-name" name="firstname" placeholder="Prénom" required>
+          <input type="text" class="input" id="last-name" name="lastname" placeholder="Nom"  required>
+          <input type="email" class="input" id="email" name="email" placeholder="Email" required>
+          <textarea class="input" name="message" rows="5" cols="33" placeholder="Votre message" required></textarea>
+          <button type="submit" class="button">Envoyer</button>
+        </form>
+      </div>
+      <div id="map"></div>
+    </div>
+    
+
+    </section>
+      <footer class="contact-info" data-aos="flip-down">
+        <ul class="contact-info__list">
+          <li class="contact-info__list__li">
+            <div class="contact-info__list__li__svg-container">
+              <svg  class="contact-info__list__li__svg-container__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M0 128C0 92.65 28.65 64 64 64H448C483.3 64 512 92.65 512 128V384C512 419.3 483.3 448 448 448H64C28.65 448 0 419.3 0 384V128zM48 128V150.1L220.5 291.7C241.1 308.7 270.9 308.7 291.5 291.7L464 150.1V127.1C464 119.2 456.8 111.1 448 111.1H64C55.16 111.1 48 119.2 48 127.1L48 128zM48 212.2V384C48 392.8 55.16 400 64 400H448C456.8 400 464 392.8 464 384V212.2L322 328.8C283.6 360.3 228.4 360.3 189.1 328.8L48 212.2z"/></svg>
+            </div> 
+            <a  href="mailto:florian.saliba@gmail.com" class="contact-info__list__li__a">florian.saliba@gmail.com</a>
+          </li>
+          <li class="contact-info__list__li">
+            <div class="contact-info__list__li__svg-container">
+              <svg class="contact-info__list__li__svg-container__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
+            </div> 
+            <a  href="https://github.com/Floriansaliba" target="_blank" class="contact-info__list__li__a">github.com/Floriansaliba</a>
+          </li>
+          <li class="contact-info__list__li">
+            <div class="contact-info__list__li__svg-container">
+              <svg class="contact-info__list__li__svg-container__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"/></svg>
+            </div> 
+            <a  href="https://www.linkedin.com/in/florian-saliba/" target="_blank" class="contact-info__list__li__a">linkedin.com/in/florian-saliba</a>
+          </li>
+        </ul>
+
+      </footer>
+    <div id="top">
+      <svg id="top__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM377 271c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-87-87-87 87c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9L239 167c9.4-9.4 24.6-9.4 33.9 0L377 271z"/></svg>  
+    </div>
+    <aside id="modal" class="modal-closed">
+      <div id="modal__frame">
+
+      </div>
+    </aside>
+
+    <script type="module" src="index.js"></script>
   </body>
 </html>
