Fix text mistakes and pictures display

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <li>
               <strong class="skill">Validation W3C, WAI</strong><br />
               <em class="skill__description"
-                >Accessibilité et egronomie des pages web</em
+                >Accessibilité et ergonomie des pages web</em
               >
             </li>
             <li>
