Ajout des projets gemity

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="background__title">
         <h1 class="background__title__h1">Florian SALIBA</h1>
         <h2 class="background__title__h2">Développeur web</h2>
-        <h2 class="background__title__h2">Front End</h2>
+        <h2 class="background__title__h2">Full Stack</h2>
       </div>
       <img
         class="background__img"
@@ -221,6 +221,32 @@
             <li>
               <strong class="skill">Débuggage</strong><br />
               <em class="skill__description">Ciblage et résolution des bugs</em>
+            </li>
+            <li>
+              <strong class="skill">Gestion de bases de données</strong><br />
+              <em class="skill__description"
+                >Connaissance des bases de données relationnelles et non
+                relationnelles</em
+              >
+            </li>
+            <li>
+              <strong class="skill">Back end </strong><br />
+              <em class="skill__description"
+                >Création d'API avec Node.js et Express</em
+              >
+            </li>
+            <li>
+              <strong class="skill">Sécurité web avancée </strong><br />
+              <em class="skill__description"
+                >Sécurité contre les attaques les plus courantes (SQL, XSS)
+              </em>
+            </li>
+            <li>
+              <strong class="skill">Développement mobile</strong><br />
+              <em class="skill__description"
+                >Développement d'applications mobile cross-platform avec React
+                Native.
+              </em>
             </li>
           </ul>
         </div>
@@ -342,23 +368,41 @@
         </div>
         <div class="dropdown__content">
           <p class="dropdown__content__p">
-            Ma motivation est basée sur la recherche de challenges, la création,
-            l'innovation et l'apprentissage permanant. Autant de qualités que se
-            doit d'avoir un développeur Front-End. Je me suis par ailleurs testé
-            au développement via le site OpenClassrooms avant de me lancer dans
-            un parcours diplômant. J'ai pris du plaisir à apprendre par la
-            pratique et le fait de voir instantanément le fruit de mon travail à
-            l’écran me procurait une grande satisfaction. Absorbé par les vidéos
-            de développeurs transmettant avec passion leurs savoirs autour de
-            CSS, HTML ou Javascript, je décide de me lancer pour un an dans le
-            parcours de développeur d’applications front-end proposé par
-            OpenClassroom.
+            Ma passion pour le développement est ancrée dans mon amour pour les
+            défis, la créativité, l'innovation et l'apprentissage continu. Ces
+            qualités, essentielles dans le domaine du développement, m'ont
+            initialement attiré vers le développement front-end. Mon aventure a
+            commencé avec OpenClassrooms, où j'ai découvert le plaisir de
+            l'apprentissage pratique. La satisfaction immédiate de voir le
+            résultat de mon travail sur l'écran était profondément gratifiante.
+            Inspiré par les vidéos de développeurs partageant passionnément
+            leurs connaissances en CSS, HTML et Javascript, j'ai entrepris un
+            parcours pour devenir développeur d'applications front-end.
+            <br /><br />
+            Avec le temps, mon intérêt et ma curiosité m'ont mené au-delà du
+            front-end. J'ai embrassé les complexités du développement back-end,
+            acquérant des compétences en bases de données, serveurs, et logique
+            métier. Pour consolider davantage mes compétences et acquérir une
+            expertise complète, j'ai suivi une année d'étude en alternance avec
+            l'école 3W Academy. Cette expérience m'a permis de travailler sur
+            des projets concrets tout en poursuivant mon diplôme de développeur
+            full stack.<br /><br />
+            Cette transition naturelle vers le rôle de développeur full stack,
+            complétée par mon expérience en alternance, a élargi ma perspective
+            et mes capacités. Aujourd'hui, en tant que développeur full stack,
+            je combine la magie visuelle du front-end avec la puissance
+            fonctionnelle du back-end. Cette approche holistique me permet de
+            construire des applications plus robustes, efficaces et complètes.
+            Mon parcours continue d'être un mélange stimulant de résolution de
+            problèmes, d'innovation et d'apprentissage permanent.
           </p>
         </div>
       </div>
       <div class="dropdown">
         <div class="dropdown__head">
-          <p class="dropdown__head__title">Pourquoi OpenClassrooms ?</p>
+          <p class="dropdown__head__title">
+            Pourquoi avoir choisi OpenClassrooms et 3W Academy ?
+          </p>
           <div class="dropdown__head__arrow">
             <svg
               class="down"
@@ -384,14 +428,28 @@
         </div>
         <div class="dropdown__content">
           <p class="dropdown__content__p">
-            Plutôt que de revenir sur les bancs de l’école, j’ai privilégié un
-            apprentissage 100% en ligne, me permettant de suivre mes cours de
-            manière autonome. OpenClassrooms proposait une offre permettant
-            l’apprentissage par la pratique. J’ai pu réaliser 14 projets en 1
-            an, le but étant de faire valider chaque compétence acquises par des
-            professionnels du développement Front, et profiter de leur retour
-            d’expérience, afin d’intégrer le marché de l’emploi en toute
-            confiance.
+            Mon choix d'OpenClassrooms pour débuter ma carrière dans le
+            développement informatique s'est basé sur la flexibilité et
+            l'approche pratique de leur programme d'enseignement. Préférant
+            éviter un retour classique en salle de classe, j'ai opté pour un
+            apprentissage 100% en ligne qui me permettait d'étudier de manière
+            autonome. Le format proposé par OpenClassrooms était centré sur
+            l'apprentissage par la pratique. En l'espace d'un an, j'ai pu mener
+            à bien 14 projets, chacun visant à valider des compétences
+            spécifiques avec des retours d'expérience de professionnels du
+            développement front-end. Cette approche m'a non seulement renforcé
+            techniquement, mais m'a aussi préparé à intégrer le marché de
+            l'emploi avec confiance.<br /><br />
+            Dans le but d'élargir mes compétences et de devenir un développeur
+            full stack, j'ai poursuivi mon parcours éducatif avec la 3W Academy.
+            Ici, j'ai opté pour une formation en alternance, combinant théorie
+            et pratique, ce qui m'a permis de travailler sur des projets réels
+            tout en obtenant mon diplôme. Cette expérience m'a donné une
+            perspective complète du développement web, englobant à la fois le
+            front-end et le back-end. Grâce à cette formation hybride, j'ai
+            acquis une compréhension profonde de toutes les facettes du
+            développement web, me préparant à relever des défis plus complexes
+            et à apporter des solutions innovantes dans le domaine.
           </p>
         </div>
       </div>
@@ -425,11 +483,20 @@
         </div>
         <div class="dropdown__content">
           <p class="dropdown__content__p">
-            Je recherche actuellement une ESN , agence de communication, ou
-            start-up, privilégiant un fonctionnement Agile, et me permettant de
-            monter en compétences parmi des développeurs plus expérimentés.
-            L’apprentissage du développement back-end ou de l’UX/UI Design
-            restent des options envisageables à plus long terme.
+            Ayant évolué vers le rôle de développeur full stack, je suis
+            actuellement à la recherche de nouvelles opportunités dans une ESN,
+            une agence de communication, ou une start-up innovante. Je
+            privilégie un environnement de travail Agile qui me permettrait de
+            continuer à monter en compétences, en particulier dans le domaine
+            des technologies JavaScript. Mon objectif est de me spécialiser
+            davantage dans ces technologies, qui sont au cœur de nombreuses
+            applications web modernes. Je souhaite collaborer avec des
+            développeurs expérimentés, contribuer à des projets ambitieux et
+            rester à l'avant-garde des avancées technologiques en développement
+            web. Mon parcours m'a doté d'une solide base en front-end et
+            back-end, et je suis désormais prêt à approfondir ma maîtrise de
+            JavaScript et de ses frameworks, tels que React, Node.js, et
+            Angular, afin de réaliser des solutions web complètes et innovantes.
           </p>
         </div>
       </div>
